refactor: Rename application to CheckShip
Updates project name, titles, and branding elements from "LogiCheck" to "CheckShip" across various files.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "logicheck---fleet-&-logistics-management",
+  "name": "checkship---fleet-&-logistics-management",
   "private": true,
   "version": "0.0.0",
   "type": "module",
