--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "web": "vite --port 3000 --open",
+    "mobile:install": "cd mobile-client && npm install",
+    "mobile": "cd mobile-client && npm run dev"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.90.1",
