--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.90.1",
+    "csv-parser": "^3.2.0",
     "html2pdf.js": "^0.13.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
