--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.90.1",
     "csv-parser": "^3.2.0",
+    "dotenv": "^17.2.3",
     "html2pdf.js": "^0.13.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
