--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.90.1",
+    "@types/react-signature-canvas": "^1.0.7",
     "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "html2pdf.js": "^0.13.0",
@@ -22,6 +23,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.12.0",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "recharts": "^3.6.0"
   },
   "devDependencies": {
