--- a/mobile-client/package.json
+++ b/mobile-client/package.json
@@ -21,6 +21,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.0",
+    "react-signature-canvas": "^1.0.6",
     "recharts": "^3.6.0",
     "tailwind-merge": "^3.0.0"
   },
